New in master
=============

Bugfixes
--------

* Make ``data`` from global context available to templated shortcodes
  as ``global_data`` (Issue #2488)
* Don't crash if plugins is a file (Issue #2539)
* Don't mangle bare ``#`` links (Issue #2553)

Features
--------

* Improving handling of .dep files, and allowing compilers to specify
  additional targets for the render_posts task (Issue #2536)
* ``render_template`` and ``generic_renderer`` can now create HTML
  fragments.
* Allow posts to set custom ``URL_TYPE`` by using the ``url_type``
  meta tag (useful for HTML fragments inserted using JavaScript)
* Plugins can depend on other plugins being installed (Issue #2533)
* The destination folder in ``POSTS`` and ``PAGES`` can now be
  translated (Issue #2116)
* Pass ``post`` object and ``lang`` to post compilers (Issue #2531)
* Pass ``url_type`` into template's context.
* Make thumbnail naming configurable with ``IMAGE_THUMBNAIL_FORMAT``.

New in v7.8.1
=============

Bugfixes
--------

* Rename ``stories`` to ``pages`` in most of the codebase (Issue
  #1891)
* Report missing/unknown dates in posts with filenames
  (Issues #2505, #2506)
* Report filename of post that raised exception when scanning
  (Issue #2505)
* Accept ``page`` and ``pages`` for the ``type`` field in post lists
* Don’t crash if a post list has no posts (Issue #2489)

Features
--------

* Add Hebrew translation by Yitzhak Bar Geva
* Add Chinese (Traditional) ``zh_TW`` translation by Po-Wen Chi
* Add ``nikola theme --list-installed`` (Issue #2504)
* Add ``KATEX_AUTO_RENDER`` setting to configure math delimiters
* Update KaTeX version to 0.6.0: support aligned math display
* Better support for a tree of files in ``data/``

New in v7.8.0
=============

Features
--------

* Exposed ``gist`` as a shortcode (Issue #2459)
* Always copy source files for listings (Issue #2473)
* Detect dependencies in template strings (Issue #2455)
* RSS feeds for sections (Issue #2068)